fixup! ap physics spacing issues

--- a/rulesets/output/ap-physics.css
+++ b/rulesets/output/ap-physics.css
@@ -417,6 +417,11 @@ Usage Note: key: class of the containing span, value: text that will go inside s
   content: counter(chapter);
   class: os-number;
   move-to: bChapterLabel; }
+:pass(2) div[data-type="chapter"]::before {
+  container: span;
+  content: " ";
+  class: os-divider;
+  move-to: bChapterLabel; }
 :pass(2) div[data-type="chapter"] > [data-type="document-title"] {
   container: h1;
   content: pending(bChapterLabel) content(); }
@@ -434,6 +439,11 @@ Usage Note: key: class of the containing span, value: text that will go inside s
   content: counter(appendix,upper-alpha);
   class: os-number;
   move-to: bAppendixLabel; }
+:pass(2) div.appendix::before {
+  container: span;
+  content: " ";
+  class: os-divider;
+  move-to: bAppendixLabel; }
 :pass(2) div.appendix > [data-type="document-title"] {
   container: h1;
   content: pending(bAppendixLabel) content(); }
@@ -445,6 +455,11 @@ Usage Note: key: class of the containing span, value: text that will go inside s
   container: span;
   content: counter(chapter) "." counter(section);
   class: os-number;
+  move-to: bSectionLabel; }
+:pass(2) div[data-type="chapter"] > div[data-type="page"]:not(.introduction)::before {
+  container: span;
+  content: " ";
+  class: os-divider;
   move-to: bSectionLabel; }
 :pass(2) div[data-type="chapter"] > div[data-type="page"]:not(.introduction) > [data-type="document-title"] {
   container: h2;
@@ -464,6 +479,11 @@ Usage Note: key: class of the containing span, value: text that will go inside s
   container: span;
   content: counter(chapter) "." counter(example);
   class: os-number;
+  move-to: bExampleLabel; }
+:pass(2) .example::before {
+  container: span;
+  content: " ";
+  class: os-divider;
   move-to: bExampleLabel; }
 :pass(2) .example > [data-type="title"] {
   move-to: trash; }
@@ -856,8 +876,13 @@ Usage Note: key: class of the containing span, value: text that will go inside s
   move-to: bCaption; }
 :pass(6) [data-type="chapter"] :not(table) > table:not(.unnumbered)::before {
   container: span;
-  content: counter(chapter) ". " counter(table);
+  content: counter(chapter) "." counter(table);
   class: os-number;
+  move-to: bCaption; }
+:pass(6) [data-type="chapter"] :not(table) > table:not(.unnumbered)::before {
+  container: span;
+  content: " ";
+  class: os-divider;
   move-to: bCaption; }
 :pass(6) [data-type="chapter"] :not(table) > table:not(.unnumbered) caption [data-type="title"] {
   container: span;
@@ -884,6 +909,11 @@ Usage Note: key: class of the containing span, value: text that will go inside s
   content: counter(appendix,upper-alpha) ". " counter(table);
   class: os-number;
   move-to: bCaption; }
+:pass(6) .appendix :not(table) > table:not(.unnumbered)::before {
+  container: span;
+  content: " ";
+  class: os-divider;
+  move-to: bCaption; }
 :pass(6) .appendix :not(table) > table:not(.unnumbered) caption [data-type="title"] {
   container: span;
   class: "os-title";
@@ -909,6 +939,11 @@ Usage Note: key: class of the containing span, value: text that will go inside s
   content: counter(chapter) ". " counter(figure);
   class: os-number;
   move-to: bCaption; }
+:pass(6) [data-type="chapter"] :not(figure) > figure:not(.unnumbered)::before {
+  container: span;
+  content: " ";
+  class: os-divider;
+  move-to: bCaption; }
 :pass(6) [data-type="chapter"] :not(figure) > figure:not(.unnumbered) figcaption {
   container: span;
   class: "os-caption";
@@ -933,6 +968,11 @@ Usage Note: key: class of the containing span, value: text that will go inside s
   container: span;
   content: counter(appendix,upper-alpha) ". " counter(figure);
   class: os-number;
+  move-to: bCaption; }
+:pass(6) .appendix :not(figure) > figure:not(.unnumbered)::before {
+  container: span;
+  content: " ";
+  class: os-divider;
   move-to: bCaption; }
 :pass(6) .appendix :not(figure) > figure:not(.unnumbered) figcaption {
   container: span;
